--- a/estilo.css
+++ b/estilo.css
@@ -143,3 +143,40 @@ body {
   color: #f8f8f8;
   font-weight: bold;
 }
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  body{background-color: red;
+  }
+  .botoes{
+    display:block;
+  }
+  .botoes{
+    display: block;
+    width: 100%;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  body{background-color: blue;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  body{background-color: green;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  body{background-color: yellow;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body{
+    background-color: blueviolet;
+  }
+}
